--- a/clan-tracker-api/pom.xml
+++ b/clan-tracker-api/pom.xml
@@ -16,15 +16,23 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.th3hero</groupId>
+            <artifactId>clan-tracker-lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.th3hero</groupId>
+            <artifactId>clan-tracker-jpa</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.kseth</groupId>
-            <artifactId>development-starter-jpa</artifactId>
+            <artifactId>development-starter-monitoring</artifactId>
         </dependency>
         <dependency>
             <groupId>com.kseth</groupId>
-            <artifactId>development-starter-postgres</artifactId>
-            <scope>runtime</scope>
+            <artifactId>development-starter-rest-webmvc</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
