--- a/clan-tracker-lib/pom.xml
+++ b/clan-tracker-lib/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>development-util</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
