--- a/clan-tracker-jpa/pom.xml
+++ b/clan-tracker-jpa/pom.xml
@@ -15,10 +15,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.th3hero</groupId>
-			<artifactId>clan-tracker-lib</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.kseth</groupId>
 			<artifactId>development-starter-jpa</artifactId>
 		</dependency>
@@ -27,7 +23,36 @@
 			<artifactId>development-starter-postgres</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>cz.habarta.typescript-generator</groupId>
+				<artifactId>typescript-generator-maven-plugin</artifactId>
+				<version>3.2.1263</version>
+				<executions>
+					<execution>
+						<!--						<?m2e execute onConfiguration,onIncremental?>-->
+						<id>generate</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<phase>process-classes</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<jsonLibrary>jackson2</jsonLibrary>
+					<classes>
+						<class>com.th3hero.clantracker.jpa.ui.Clan</class>
+						<class>com.th3hero.clantracker.jpa.ui.MemberActivity</class>
+						<class>com.th3hero.clantracker.jpa.ui.ActivityInfo</class>
+					</classes>
+					<outputKind>module</outputKind>
+					<outputFile>./target/typescript-generator/clan-tracker-dtos.d.ts</outputFile>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
