--- a/clan-tracker-jpa/pom.xml
+++ b/clan-tracker-jpa/pom.xml
@@ -15,6 +15,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.th3hero</groupId>
+			<artifactId>clan-tracker-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.kseth</groupId>
 			<artifactId>development-starter-jpa</artifactId>
 		</dependency>
@@ -24,35 +28,5 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>cz.habarta.typescript-generator</groupId>
-				<artifactId>typescript-generator-maven-plugin</artifactId>
-				<version>3.2.1263</version>
-				<executions>
-					<execution>
-						<!--						<?m2e execute onConfiguration,onIncremental?>-->
-						<id>generate</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<phase>process-classes</phase>
-					</execution>
-				</executions>
-				<configuration>
-					<jsonLibrary>jackson2</jsonLibrary>
-					<classes>
-						<class>com.th3hero.clantracker.jpa.ui.Clan</class>
-						<class>com.th3hero.clantracker.jpa.ui.MemberActivity</class>
-						<class>com.th3hero.clantracker.jpa.ui.ActivityInfo</class>
-					</classes>
-					<outputKind>module</outputKind>
-					<outputFile>./target/typescript-generator/clan-tracker-dtos.d.ts</outputFile>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
