--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.th3hero</groupId>
 	<artifactId>clan-tracker</artifactId>
-	<version>0.0.1</version>
+	<version>1.0.0-BETA</version>
 	<name>clan-tracker</name>
 	<description>WOT clan tracker tool</description>
 	<packaging>pom</packaging>
