--- a/clan-tracker-app/pom.xml
+++ b/clan-tracker-app/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.th3hero</groupId>
 		<artifactId>clan-tracker</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2</version>
 	</parent>
 
 	<artifactId>clan-tracker-app</artifactId>
@@ -34,6 +34,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
