Fixed not saving players before saving members

--- a/clan-tracker-api/pom.xml
+++ b/clan-tracker-api/pom.xml
@@ -47,11 +47,12 @@
 				<configuration>
 					<jsonLibrary>jackson2</jsonLibrary>
 					<classes>
-						<class>com.th3hero.clantracker.api.ui.Config</class>
-						<class>com.th3hero.clantracker.api.ui.Rank</class>
-						<class>com.th3hero.clantracker.api.ui.Clan</class>
-						<class>com.th3hero.clantracker.api.ui.MemberActivity</class>
 						<class>com.th3hero.clantracker.api.ui.ActivityInfo</class>
+						<class>com.th3hero.clantracker.api.ui.Clan</class>
+						<class>com.th3hero.clantracker.api.ui.Config</class>
+						<class>com.th3hero.clantracker.api.ui.MemberActivity</class>
+						<class>com.th3hero.clantracker.api.ui.PlayerInfo</class>
+						<class>com.th3hero.clantracker.api.ui.Rank</class>
 					</classes>
 					<outputKind>module</outputKind>
 					<outputFile>./target/typescript-generator/clan-tracker-dtos.d.ts</outputFile>
