Changed getPlayerInfo to return a list of players
Changed getPlayerInfo to return a list of player info rather then returning an error if multiple players match the criteria.

--- a/clan-tracker-api/pom.xml
+++ b/clan-tracker-api/pom.xml
@@ -52,6 +52,7 @@
 						<class>com.th3hero.clantracker.api.ui.Config</class>
 						<class>com.th3hero.clantracker.api.ui.MemberActivity</class>
 						<class>com.th3hero.clantracker.api.ui.PlayerInfo</class>
+						<class>com.th3hero.clantracker.api.ui.PlayerSearch</class>
 						<class>com.th3hero.clantracker.api.ui.Rank</class>
 					</classes>
 					<outputKind>module</outputKind>
